assets/css/style.css
/* General Styles */
* {
    padding: 0;
    margin: 0;
}

body {
    font-family: 'Merienda', cursive;
    background-color: #191717;
    display: flex;
    flex-direction: column;
    background: url("../images/johny-goerend-Oz2ZQ2j8We8-unsplash.webp") no-repeat center /cover;
    min-height: 100vh;
    overflow: hidden;
    
}

h1,
h5 {
    padding: 5px 0 5px 0;
    text-align: center;
}

.hidden {
    display: none;
}


/* header styling */
.title-bar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    justify-items: center;
}

.title-bar h1 {
   margin: auto auto;
}

#header {
    width: 100%;
    font-size: 1rem;
    background-color: #191717;
    color: #F1EFEF;
    text-align: center;
    
}

#help {
    width: 10%;
    color: white;
    width: 100px;
    height: 60px;
    border-radius: 50%;
    text-transform: uppercase;
    letter-spacing: 1.2px;
    border: 6px solid #191717;
    font-size: 2.2rem;
    background-color: #191717;
    padding-top: 6px;
}

/* Score and game Section Styling */
#main-scores h3,
#round-scores h3,
#game-area h3,
#game-area h4,
#computer-choice h4 {
    text-align: center;
    margin-bottom: 5px;

}

#main-scores,
#round-scores,
#game-area {
    background-color: rgba(60, 60, 60, 0.6);
    padding: 0 5px 0 5px;
    border-radius: 5px;
    margin: 1%;
    color: #F1EFEF;
    font-weight: bold;
}

#feedback-area h3 {
    padding-bottom: 15px;
}

.score-container {
    display: flex;
    flex-direction: row;
}

.score-layout {
    width: 50%;
}

#controls {
    width: 100%;
    margin: 20px auto;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
    padding-bottom: 20px;
    height: auto;
}

#computer-choice {
    width: 85%;
    margin: 10px auto;
    text-align: center;

}

/* Buttons */
.btn {
    width: 150px;
    height: 50px;
    text-transform: uppercase;
    letter-spacing: 1.2px;
    color: white;

}

.btn:focus {
    outline: none;
}

.btn--big {
    padding-top: 5px;
    border-radius: 50%;
    border: 6px solid;
    width: 60px;
    height: 60px;
    font-size: 2.2rem;
    margin: 0 15px;
    transition: all 0.5s;
    color: #191717;
}

.btn-red {
    border-color: red;
    color: red;
}

.btn-blue {
    border-color: blue;
    color: blue;
}

.btn-green {
    border-color: green;
    color: green;
}

.btn-purple {
    border-color: purple;
    color: purple;
}

.btn-orange {
    border-color: orange;
    color: orange;
}

.btn-slate-blue {
    border-color: slateblue;
    color: slateblue;
}

.btn-blue:active,
.btn-blue:hover {
    background-color: blue;
    color: white;
}

.btn-red:active,
.btn-red:hover {
    background-color: red;
    color: white;
}

.btn-green:active,
.btn-green:hover {
    background-color: green;
    color: white;
}

.btn-purple:active,
.btn-purple:hover {
    background-color: purple;
    color: white;
}

.btn-orange:active,
.btn-orange:hover {
    background-color: orange;
    color: white;
}

.btn-slate-blue:active,
.btn-slate-blue:hover {
    background-color: slateblue;
    color: white;
}

#game-winner {
    background-color: #191717;
}

/* Instructions Section*/
#instructions {
    background-color:rgba(8, 8, 8, 0.9);
    color: white;
    width: 95%;
    position: absolute;
    top: 100px;
    left: -10px;
    margin: 15px 15px;
}

#instructions div {
    padding: 0 10px 30px 20px;
    font-size: 1rem;
    max-height: 500px;
    overflow-y: scroll;
}

#instructions h2 {
    text-align: center;
    padding-bottom: 10px;
}

#instructions p {
    font-size: 0.8rem;
    text-align: left;
}

#instructions li {
    padding-top: 10px;
    padding-left: 10px;
    font-size: 0.8rem;
}

/* Media query for table screen */
@media screen and (min-width: 768px) {
    /* General styling */
    h1,
    h3,
    h4 {
        font-size: 2.1rem;
        margin: 8px 0;
    }

    h5 {
        font-size: 1.3rem;
    }

    /* Scores and game area container styling */
    #scores-main-container {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
    }

    .score-layout {
        width: 100%;
        padding-top: 15px;
    }

    #main-scores,
    #round-scores {
        width: 45%;
        height: 220px;
    }

    .score-container {
        display: flex;
        flex-direction: column;
        max-width: 100%;
    }

    #game-area {
        width: 85%;
        margin: auto auto;
    }

    #controls {
        height: auto;
        padding-bottom: 50px;
    }

    

    #result {
        padding-bottom: 50px;
    }

    #computer-choice h4 {
        margin-top: 50px;
        margin-bottom: 15px;
    }

    #feedback-area {
        margin-top: 40px;
    }

    /* Button styling */
    .btn--big::after {
        content: attr(data-type);
        font-size: 1rem;
        color: #F1EFEF;
        position: relative;
        left: -0.3em;
    }

    .btn--big {
        padding-top: 15px;
        border-radius: 50%;
        border: 6px solid;
        width: 100px;
        height: 100px;
        font-size: 3.2rem;
        margin: 0 15px;
        transition: all 0.5s;

    }

    /* Instruction section */
    #instructions {
        width: 65%;
        left: 130px;
    }

    #instructions div {
        max-height: 500px;
    }

}

@media screen and (min-width: 1050px) {

    /* General styling */
    body {
        background-image: url("../images/john-fowler-7Ym9rpYtSdA-unsplash.webp");
        background-position: bottom;
    }

    /* Instruction section */
    #instructions {
        width: 60%;
        left: 150px;
    }

    #instructions li {
        padding-top: 10px;
        padding-left: 20px;
        font-size: 1.2rem;
        margin-left: 20px;
    }

    #instructions div {
        padding: 0 10px 30px 20px;
        font-size: 1.6rem;
        max-height: 700px;
    }

    #instructions p {
        font-size: 1.2rem;
    }
    

}

@media screen and (min-width: 1200px) {

    /* Game section styling */
    #game-section {
        margin-top: 150px;
    }

    #game-container {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        margin: 0 10px;
    }

    #scores-main-container {
        width: 60%;
    }

    #main-scores {
        width: 50%;
        height: auto;
    }

    #round-scores {
        width: 50%;
        height: auto;
        order: 9;

    }

    #game-area {
        margin: 5px;
    }

    #controls {
        justify-content: space-evenly;
    }

    /* Instruction section */
    #instructions {
        width: 50%;
        left: 150px;
    }

    #instructions li {
        padding-top: 10px;
        padding-left: 20px;
        font-size: 1.4rem;
        margin-left: 20px;
    }

    #instructions div {
        padding: 0 10px 30px 20px;
        font-size: 1.8rem;
        max-height: 900px;
    }

    #instructions p {
        font-size: 1.4rem;
    }
}

